Friday, 11 Mar 2005, Daniel R. Fisher

1.  Fixed the jaguar2qmcbeaver.py script.  It was not printing the CI coefficients, so they were
    being initialized with garbage values.

2.  Made some of the arrays in QMCDansWalkerInitialization static.  This makes the initialization
    faster.

3.  Added the capability to calculate the expectation values of the basis functions.  To do this,
    set the calculate_bf_density flag to 1.

Tues, 8 Mar 2005, Amos Anderson
1.  I upgraded Stopwatch.h so it now uses Microsoft's high precision QueryPerformanceCounter and
	QueryPerformanceFrequency timing functions. The precision is now at the 1 ms resolution when
	the USE_HIGH_PRECISION tag is defined (on by default).

Thurs, 3 Feb 2005, Amos Anderson
1.  I toyed with the makefiles, removing some mistakes/bugs and beautifying. They are now really cool.
    I added a new target "updateall" which will update all the executables simultaneously.

Tues, 1 Feb 2005, Amos Anderson
1.  Changed some of the behavior of configure.py. Now, you can easily keep all the objective
    files for several different Makefile.config choices. e.g. serial debug objective files are seperate
    from parallel debug files are separate from serial atlas debug files. Also, I changed the naming
    of the executable files so you can tell some of the options they were compiled with just by
    looking at the name. Not sure if i need to modify this to make sure it stays under 16 characters...

2.  Added numerical stability checks to QMCGreensRatioComponent.cpp, QMCBasisFunction.cpp, and
    QMCFunctions.cpp. The code now runs on LANL's QSC with or without ATLAS, on H2O, He, HMX.
    Note: according to the ATLAS website errata, the ATLAS library can not be threaded on Dec Alphas...
    I don't know how serious that is...

Thurs, 30 Dec 2004, Daniel R. Fisher

1.  Added a << function to Array3D.h so that the program would compile on QSC.


Tues, 23 Dec 2004, Amos Anderson